# spin-external-trigger-very-very-example

./: .gitignore  Cargo.toml  README.md  timer.json  trigger-timer.json
guest/: Cargo.toml  spin.toml
guest/src/: lib.rs
src/: main.rs
wit/: spin-timer.wit
