[package]
name = "timer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-core = { version = "0.7.1", path = "../../github/spin/crates/core" }
spin-trigger = { version = "0.7.1", path = "../../github/spin/crates/trigger" }
tokio = { version = "1.11", features = [ "full" ] }

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/fermyon/wit-bindgen-backport"
rev = "b84eb01c20d9ed7964cb8f296ccdc44e639019ce"
features = ["async"]
